--- a/src/components/MainPage/page/MainPage.css
+++ b/src/components/MainPage/page/MainPage.css
@@ -17,7 +17,12 @@
 
 .MainIcons {
   color: rgb(19, 48, 48);
+  cursor: pointer;
 }
+.MainIcons:hover {
+  color: rgb(0, 0, 0);
+}
+
 .MainPageLeftLinks {
   border-right: 2px solid black;
 }
